Update target Update assembly Update naming Use com.github.manevolent.ts3j instead of old library without maven repo